--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://andriy453.github.io/Tasty_treats/",
+  "homepage": "https://GoitStudentsWorks.github.io/js_86_andriy453/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Tasty_treats/"
+    "build": "parcel build src/*.html --public-url /js_86_andriy453/"
   },
   "repository": {
     "type": "git",
